--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,134 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@media (prefers-color-scheme: dark) {
+   :root {
+      --foreground-rgb: 255, 255, 255;
+      --background-start-rgb: 0, 0, 0;
+      --background-end-rgb: 0, 0, 0;
+   }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+:root {
+   --primary: #000235;
+   --secondary: #8080d7;
+   --accent: #aad9d9;
+}
+
+*,
+*::before,
+*::after {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
+
+html {
+   scroll-behavior: smooth;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+   background: #000235;
+   color: white;
+   font-family: "Roboto", sans-serif;
+   overflow-x: hidden;
+}
+
+/* FONTS */
+.font-roboto {
+   font-family: var(--font-roboto);
+}
+.font-outfit {
+   font-family: var(--font-outfit);
+}
+
+/* typography */
+.text-h1 {
+   font-size: clamp(2rem, 5vw, 5rem);
+   line-height: clamp(2.5rem, 5vw, 5rem);
+}
+
+.text-p {
+   font-size: clamp(1rem, 3vw, 1.5rem);
+}
+
+.text-button {
+   font-size: clamp(0.8rem, 2vw, 1.1rem);
+}
+
+/* navbar */
+.navbar-show {
+   right: 0;
+   top: 80px;
+   transition: all 300ms ease-in;
+}
+
+.navbar-hide {
+   right: -10rem;
+   top: 80px;
+   transition: all 300ms ease-in;
+}
+
+.rainbow-text-loop {
+   font-size: 1rem;
+   display: inline-block;
+   margin-top: 2rem;
+   text-shadow: 2px 2px 4px #000000;
+   text-align: center;
+   animation: rainbow 5s linear infinite;
+}
+
+@keyframes rainbow {
+   0% {
+      color: orange;
+   }
+   10% {
+      color: purple;
+   }
+   20% {
+      color: red;
+   }
+   30% {
+      color: CadetBlue;
+   }
+   40% {
+      color: yellow;
+   }
+   50% {
+      color: coral;
+   }
+   60% {
+      color: green;
+   }
+   70% {
+      color: cyan;
+   }
+   80% {
+      color: DeepPink;
+   }
+   90% {
+      color: DodgerBlue;
+   }
+   100% {
+      color: orange;
+   }
+}
+
+/* gradients */
+.secondary__gradient {
+   background: var(--secondary);
+   opacity: 0.5;
+   filter: blur(150px);
+}
+
+.accent__gradient {
+   background: var(--accent);
+   opacity: 0.4;
+   filter: blur(150px);
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+   .text-balance {
+      text-wrap: balance;
+   }
 }
